--- a/tridactyl/.config/tridactyl/themes/neg.css
+++ b/tridactyl/.config/tridactyl/themes/neg.css
@@ -1,37 +1,21 @@
 :root {
-    --base00: #020202;
-    --base01: #8A2F58;
-    --base02: #287373;
-    --base03: #914E89;
-    --base04: #395573;
-    --base05: #5E468C;
-    --base06: #2B7694;
-    --base07: #899CA1;
-    --base08: #3D3D3D;
-    --base09: #CF4F88;
-    --base0A: #53A6A6;
-    --base0B: #BF85CC;
-    --base0C: #4779B3;
-    --base0D: #7F62B3;
-    --base0E: #47959E;
-    --base0F: #617287;
+    --color_black: #020202;
+    --url_highlight: #004E4E;
+    --line_highlight: #13384F;
+    --border_color: #0a3749;
     --foreground: #DEDEDE;
 
     --tridactyl-fg: var(--foreground);
-    --tridactyl-bg: var(--base00);
-    --tridactyl-url-fg: var(--base08);
-    --tridactyl-url-bg: var(--base00);
-    --tridactyl-highlight-box-bg: var(--base0B);
-    --tridactyl-highlight-box-fg: var(--base00);
+    --tridactyl-bg: var(--color_black);
+    --tridactyl-url-fg: var(--url_highlight);
+    --tridactyl-url-bg: var(--color_black);
 
-    /* Hint character tags */
     --tridactyl-hintspan-fg: #89CDD2 !important;
     --tridactyl-hintspan-bg: #001742 !important;
     --tridactyl-hintspan-font-family: "Iosevka" !important;
+    --tridactyl-hintspan-font-weight: "Medium" !important;
     --tridactyl-hintspan-font-size: 10pt !important;
-    --tridactyl-hintspan-font-weight: Medium !important;
 
-    /* Element Highlights */
     --tridactyl-hint-active-fg: var(--foreground);
     --tridactyl-hint-active-bg: var(--tridactyl-hintspan-bg);
     --tridactyl-hint-active-outline: none;
@@ -41,14 +25,13 @@
 
 #command-line-holder {    
     order: 1;
-    border: 1px solid #0a3749;
+    border: 1px solid var(--border_color);
     color: var(--tridactyl-bg);
 }
 
 #tridactyl-input {    
     color: var(--tridactyl-fg);
     background: var(--tridactyl-bg);
-    padding: -8px -8px;
     font-family: "Iosevka";
     font-size: 14pt;
 }
@@ -60,7 +43,6 @@
     display: inline-block;
     overflow: hidden;
     width: 100%;
-
     font-family: "Iosevka";
     font-size: 14pt;
     padding: -8px -8px;
@@ -89,7 +71,6 @@
     table-layout: fixed;
 }
 
-/* redundancy 2: redundancy 2: more redundancy */
 #completions .BmarkCompletionSource {    
     max-height: 292pt;
     min-height: unset;
@@ -103,7 +84,7 @@
 }
 
 #completions table tr .title {    
-    width: 50%;
+    width: 70%;
 }
 
 #completions table tr {    
@@ -119,13 +100,13 @@
 }
 
 #completions .focused {    
-    background: #184050;
+    background: var(--line_highlight);
     color: var(--foreground);
     padding: -8px -8px;
 }
 
 #completions .focused .url {    
-    background: #184050;
+    background: var(--line_highlight);
     color: var(--foreground);
     padding: -8px -8px;
 }
@@ -134,7 +115,7 @@
     position: fixed !important;
     bottom: 0 !important;
     background: var(--tridactyl-bg) !important;
-    border: 2px #0a3749 solid !important;
+    border: 2px var(--border_color) solid !important;
     padding: 1px !important;
     font-family: "Iosevka" !important;
     font-weight: "Medium" !important;
