--- a/tridactyl/.config/tridactyl/themes/neg.css
+++ b/tridactyl/.config/tridactyl/themes/neg.css
@@ -3,19 +3,16 @@
     --url_highlight: #004E4E;
     --line_highlight: #13384F;
     --border_color: #0a3749;
-    --foreground: #DEDEDE;
-
+    --foreground: #E8EAFF;
     --tridactyl-fg: var(--foreground);
     --tridactyl-bg: var(--color_black);
     --tridactyl-url-fg: var(--url_highlight);
     --tridactyl-url-bg: var(--color_black);
-
     --tridactyl-hintspan-fg: #89CDD2 !important;
     --tridactyl-hintspan-bg: #001742 !important;
     --tridactyl-hintspan-font-family: "Iosevka" !important;
-    --tridactyl-hintspan-font-weight: "Medium" !important;
+    --tridactyl-hintspan-font-style: "Medium" !important;
     --tridactyl-hintspan-font-size: 10pt !important;
-
     --tridactyl-hint-active-fg: var(--foreground);
     --tridactyl-hint-active-bg: var(--tridactyl-hintspan-bg);
     --tridactyl-hint-active-outline: none;
@@ -25,7 +22,7 @@
 
 #command-line-holder {    
     order: 1;
-    border: 1px solid var(--border_color);
+    border: 1pt solid var(--border_color);
     color: var(--tridactyl-bg);
 }
 
@@ -33,6 +30,7 @@
     color: var(--tridactyl-fg);
     background: var(--tridactyl-bg);
     font-family: "Iosevka";
+    font-style: "Medium";
     font-size: 14pt;
 }
 
@@ -44,8 +42,9 @@
     overflow: hidden;
     width: 100%;
     font-family: "Iosevka";
+    font-style: "Medium";
     font-size: 14pt;
-    padding: -8px -8px;
+    padding: -8pt -8pt;
 }
 
 #completions > div {    
@@ -54,8 +53,9 @@
 }
 
 #completions table {    
-    padding: -8px -8px;
     font-family: "Iosevka";
+    font-style: "Medium";
+    padding: -8pt -8pt;
     font-size: 14pt;
 }
 
@@ -102,32 +102,20 @@
 #completions .focused {    
     background: var(--line_highlight);
     color: var(--foreground);
-    padding: -8px -8px;
+    padding: -8pt -8pt;
 }
 
 #completions .focused .url {    
     background: var(--line_highlight);
     color: var(--foreground);
-    padding: -8px -8px;
-}
-
-.TridactylStatusIndicator {    
-    position: fixed !important;
-    bottom: 0 !important;
-    background: var(--tridactyl-bg) !important;
-    border: 2px var(--border_color) solid !important;
-    padding: 1px !important;
-    font-family: "Iosevka" !important;
-    font-weight: "Medium" !important;
-    font-size: 12pt !important;
+    padding: -8pt -8pt;
 }
 
 /* taken from hint css */
 span.TridactylHint {
     font-family: var(--tridactyl-hintspan-font-family) !important;
     font-size: var(--tridactyl-hintspan-font-size) !important;
-    font-weight: var(--tridactyl-hintspan-font-weight) !important;
-
+    font-style: var(--tridactyl-hintspan-font-style) !important;
     position: absolute !important;
     color: var(--tridactyl-hintspan-fg) !important;
     background-color: var(--tridactyl-hintspan-bg) !important;
@@ -136,6 +124,5 @@ span.TridactylHint {
     border-style: var(--tridactyl-hintspan-border-style) !important;
     padding: 2pt !important;
     z-index: 2147483646 !important;
-
     border-radius: 4px!important;
 }
