--- a/tridactyl/.config/tridactyl/themes/neg.css
+++ b/tridactyl/.config/tridactyl/themes/neg.css
@@ -3,7 +3,7 @@
     --url_highlight: #004E4E;
     --line_highlight: #13384F;
     --border_color: #0a3749;
-    --foreground: #E8EAFF;
+    --foreground: #F0F1FF;
     --tridactyl-fg: var(--foreground);
     --tridactyl-bg: var(--color_black);
     --tridactyl-url-fg: var(--url_highlight);
