--- a/misc/.config/tridactyl/themes/neg.css
+++ b/misc/.config/tridactyl/themes/neg.css
@@ -1,128 +1,128 @@
 :root {
-    --color_black: #020202;
-    --url_highlight: #004E4E;
-    --line_highlight: #13384F;
-    --border_color: #0a3749;
-    --foreground: #F0F1FF;
-    --tridactyl-fg: var(--foreground);
-    --tridactyl-bg: var(--color_black);
-    --tridactyl-url-fg: var(--url_highlight);
-    --tridactyl-url-bg: var(--color_black);
-    --tridactyl-hintspan-fg: #89CDD2 !important;
-    --tridactyl-hintspan-bg: #001742 !important;
-    --tridactyl-hintspan-font-family: "Iosevka" !important;
-    --tridactyl-hintspan-font-style: "Medium" !important;
-    --tridactyl-hintspan-font-size: 10pt !important;
-    --tridactyl-hint-active-fg: var(--foreground);
-    --tridactyl-hint-active-bg: var(--tridactyl-hintspan-bg);
-    --tridactyl-hint-active-outline: none;
-    --tridactyl-hint-bg: none;
-    --tridactyl-hint-outline: none;
+  --color_black: #020202;
+  --url_highlight: #004e4e;
+  --line_highlight: #13384f;
+  --border_color: #0a3749;
+  --foreground: #f0f1ff;
+  --tridactyl-fg: var(--foreground);
+  --tridactyl-bg: var(--color_black);
+  --tridactyl-url-fg: var(--url_highlight);
+  --tridactyl-url-bg: var(--color_black);
+  --tridactyl-hintspan-fg: #89cdd2 !important;
+  --tridactyl-hintspan-bg: #001742 !important;
+  --tridactyl-hintspan-font-family: "Iosevka" !important;
+  --tridactyl-hintspan-font-style: "Medium" !important;
+  --tridactyl-hintspan-font-size: 10pt !important;
+  --tridactyl-hint-active-fg: var(--foreground);
+  --tridactyl-hint-active-bg: var(--tridactyl-hintspan-bg);
+  --tridactyl-hint-active-outline: none;
+  --tridactyl-hint-bg: none;
+  --tridactyl-hint-outline: none;
 }
 
-#command-line-holder {    
-    order: 1;
-    border: 1pt solid var(--border_color);
-    color: var(--tridactyl-bg);
+#command-line-holder {
+  order: 1;
+  border: 1pt solid var(--border_color);
+  color: var(--tridactyl-bg);
 }
 
-#tridactyl-input {    
-    color: var(--tridactyl-fg);
-    background: var(--tridactyl-bg);
-    font-family: "Iosevka";
-    font-style: "Medium";
-    font-size: 14pt;
+#tridactyl-input {
+  color: var(--tridactyl-fg);
+  background: var(--tridactyl-bg);
+  font-family: "Iosevka";
+  font-style: "Medium";
+  font-size: 14pt;
 }
 
-#completions {    
-    --option-height: 1.2em;
-    color: var(--tridactyl-fg);
-    background: var(--tridactyl-bg);
-    display: inline-block;
-    overflow: hidden;
-    width: 100%;
-    font-family: "Iosevka";
-    font-style: "Medium";
-    font-size: 14pt;
-    padding: -8pt -8pt;
+#completions {
+  --option-height: 1.2em;
+  color: var(--tridactyl-fg);
+  background: var(--tridactyl-bg);
+  display: inline-block;
+  overflow: hidden;
+  width: 100%;
+  font-family: "Iosevka";
+  font-style: "Medium";
+  font-size: 14pt;
+  padding: -8pt -8pt;
 }
 
-#completions > div {    
-    max-height: calc(20 * var(--option-height));
-    min-height: calc(2 * var(--option-height));
+#completions > div {
+  max-height: calc(20 * var(--option-height));
+  min-height: calc(2 * var(--option-height));
 }
 
-#completions table {    
-    font-family: "Iosevka";
-    font-style: "Medium";
-    padding: -8pt -8pt;
-    font-size: 14pt;
+#completions table {
+  font-family: "Iosevka";
+  font-style: "Medium";
+  padding: -8pt -8pt;
+  font-size: 14pt;
 }
 
-#completions .HistoryCompletionSource {    
-    max-height: 292pt;
-    min-height: unset;
+#completions .HistoryCompletionSource {
+  max-height: 292pt;
+  min-height: unset;
 }
 
-#completions .HistoryCompletionSource table {    
-    width: 100%;
-    font-size: 14pt;
-    border-spacing: 0;
-    table-layout: fixed;
+#completions .HistoryCompletionSource table {
+  width: 100%;
+  font-size: 14pt;
+  border-spacing: 0;
+  table-layout: fixed;
 }
 
-#completions .BmarkCompletionSource {    
-    max-height: 292pt;
-    min-height: unset;
+#completions .BmarkCompletionSource {
+  max-height: 292pt;
+  min-height: unset;
 }
 
-#completions .BufferCompletionSource table {    
-    width: unset;
-    font-size: 14pt;
-    border-spacing: 0;
-    table-layout: fixed;
+#completions .BufferCompletionSource table {
+  width: unset;
+  font-size: 14pt;
+  border-spacing: 0;
+  table-layout: fixed;
 }
 
-#completions table tr .title {    
-    width: 70%;
+#completions table tr .title {
+  width: 70%;
 }
 
-#completions table tr {    
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
+#completions table tr {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
-#completions .sectionHeader {    
-    background: unset;
-    border-bottom: unset;
-    padding-left: unset;
+#completions .sectionHeader {
+  background: unset;
+  border-bottom: unset;
+  padding-left: unset;
 }
 
-#completions .focused {    
-    background: var(--line_highlight);
-    color: var(--foreground);
-    padding: -8pt -8pt;
+#completions .focused {
+  background: var(--line_highlight);
+  color: var(--foreground);
+  padding: -8pt -8pt;
 }
 
-#completions .focused .url {    
-    background: var(--line_highlight);
-    color: var(--foreground);
-    padding: -8pt -8pt;
+#completions .focused .url {
+  background: var(--line_highlight);
+  color: var(--foreground);
+  padding: -8pt -8pt;
 }
 
 /* taken from hint css */
 span.TridactylHint {
-    font-family: var(--tridactyl-hintspan-font-family) !important;
-    font-size: var(--tridactyl-hintspan-font-size) !important;
-    font-style: var(--tridactyl-hintspan-font-style) !important;
-    position: absolute !important;
-    color: var(--tridactyl-hintspan-fg) !important;
-    background-color: var(--tridactyl-hintspan-bg) !important;
-    border-width: var(--tridactyl-hintspan-border-width) !important;
-    min-width: 0.75em !important;
-    border-style: var(--tridactyl-hintspan-border-style) !important;
-    padding: 2pt !important;
-    z-index: 2147483646 !important;
-    border-radius: 4px!important;
+  font-family: var(--tridactyl-hintspan-font-family) !important;
+  font-size: var(--tridactyl-hintspan-font-size) !important;
+  font-style: var(--tridactyl-hintspan-font-style) !important;
+  position: absolute !important;
+  color: var(--tridactyl-hintspan-fg) !important;
+  background-color: var(--tridactyl-hintspan-bg) !important;
+  border-width: var(--tridactyl-hintspan-border-width) !important;
+  min-width: 0.75em !important;
+  border-style: var(--tridactyl-hintspan-border-style) !important;
+  padding: 2pt !important;
+  z-index: 2147483646 !important;
+  border-radius: 4px !important;
 }
