[tridactyl] experimental compact-ff

--- a/misc/.config/tridactyl/mozilla/userChrome.css
+++ b/misc/.config/tridactyl/mozilla/userChrome.css
@@ -224,3 +224,74 @@ toolbar
   width: 12px !important;
   height: 12px !important;
 }
+
+:root {
+  /* Appmenu: Reduce item padding */
+  --arrowpanel-menuitem-padding-block: 4px 8px !important;
+  /* Tabbar: reduce tab margin */
+  --tab-block-margin: 4px 3px !important;
+}
+
+/* Tab: Reduce height */
+.tabbrowser-tab {
+  min-height: 24px !important;
+}
+
+/* Tab: Ensure tab height doesn't augment when arrowscrollbox is visible  */
+#tabbrowser-arrowscrollbox {
+  --tab-min-height: 31px !important;
+  max-height: var(--tab-min-height);
+}
+
+/* Tab: Attention icon */
+.tabbrowser-tab:is([image], [pinned])
+  > .tab-stack
+  > .tab-content[attention]:not([selected="true"]),
+.tabbrowser-tab
+  > .tab-stack
+  > .tab-content[pinned][titlechanged]:not([selected="true"]) {
+  background-position-x: left 2px !important;
+  background-position-y: bottom 12.5px !important;
+}
+
+/* URLBar: Fix vertical alignment */
+#urlbar[breakout="true"]:not([open="true"]) {
+  --urlbar-height: 20px !important;
+  --urlbar-toolbar-height: 24px !important;
+}
+
+/* URLBar: Fix URL address vertical aligment when megabar is open */
+#urlbar[breakout="true"][open="true"] {
+  --urlbar-toolbar-height: 30px !important;
+}
+
+/* Searchbar: Ensure toolbar height doesn't augment when searchbar is visible */
+#urlbar-container,
+#search-container {
+  padding-block: 0 !important;
+}
+
+/* Searchbar: Make sure the min-height of the input is the same as the popup */
+#search-container {
+  min-width: 192px !important;
+}
+
+/* Toolbar: Reduce spacing */
+#urlbar-container {
+  --urlbar-container-height: 30px !important;
+  margin-top: 0 !important;
+}
+
+/* Reload Button: Fix vertical alignment */
+#reload-button {
+  margin-block-start: -2px !important;
+}
+
+/* Windows 10 context menu */
+@media (-moz-os-version: windows-win10) {
+  /* Context Menu: Reduce vertical space */
+  menupopup > menuitem,
+  menupopup > menu {
+    padding-block: 2px !important;
+  }
+}
